# flopsync

./: .gitignore  Hardware.conf  Hardware.txt  Makefile  README.md  board_setup.h  cpu_time_profiling2.patch  currentsensor.h  demo.h  demo_node.cpp  demo_root.cpp  demo_thermocouple.h  experiment.conf  flopsync2.cpp  flopsync2.h  flopsync_RTT_master.cpp  flopsync_RTT_slave.cpp  flopsync_controllers.h  flopsync_dummy.cpp  flopsync_dynamic_comb.cpp  flopsync_dynamic_multihop.cpp  flopsync_fixed_singlehop.cpp  flopsync_rootnode.cpp  flopsync_rootnode_aggregation.cpp  flopsync_rootnode_comb.cpp  gh.h  low_power_setup.h  node.cpp  protocol_constants.h  prova.cpp  rootnode.cpp  rxtest.cpp  test_barraled_RX.cpp  test_barraled_TX.cpp  txtest.cpp  variance_estimator.h
PhD_course/: readme.txt  simplesynctest.h  simplesynctest_rx_algorithmic.cpp  simplesynctest_rx_base.cpp  simplesynctest_rx_control.cpp  simplesynctest_tx.cpp
configuration_tool_release/: ParameterConfigurationTool.sci
data/: convert.sh  extract_aggregated.pl  extract_aggregated_temperature.pl  plot.sci  plot2.sci  plot3.sci  plot_comparison.sci
deploy/: Readme.txt  magiclib-server.sh  magiclib.sh  mkpackage.pl  runexp.sh
deploy/eventgen/: CMakeLists.txt  main.cpp
deploy/fwupgrade/: CMakeLists.txt  main.cpp
deploy/fwupgrade/arduino/firmwareupgrade2/: firmwareupgrade2.ino
deploy/fwupgrade/arduino/firmwareupgrade2-from-console/: Makefile  Readme.txt  firmwareupgrade2.pde  pulsedtr.py
deploy/seriallogger/: CMakeLists.txt  main.cpp
drivers/: BarraLed.cpp  BarraLed.h  HW_mapping.h  SPI.cpp  SPI.h  cc2520.cpp  cc2520.h  cc2520_config.h  cc2520_mapping.cpp  cc2520_mapping.h  fast_trigger.h  fast_trigger.s  frame.cpp  frame.h  leds.h  nrf24l01.cpp  nrf24l01.h  rtc.cpp  rtc.h  temperature.cpp  temperature.h  timer.cpp  timer.h  transceiver.cpp
flopsync_v1/: clocksync.cpp  clocksync.h  cpu_time_profiling.patch  flopsync_controllers.cpp  flopsync_dynamic_singlehop.cpp  flopsync_dynamic_singlehop_aggregation.cpp  flopsync_fixed_multihop.cpp  flopsync_rootnode_stepresponse.cpp  variance_estimator.h
flopsync_v2/: clock.cpp  clock.h  controller_flopsync.h  critical_section.h  dummy_synchronizer.cpp  dummy_synchronizer.h  fbs.h  flooder_root_node.cpp  flooder_root_node.h  flooder_sync_node.cpp  flooder_sync_node.h  optimized_ramp_flopsync.h  protocol_constants.h  synchronizer.cpp  synchronizer.h
flopsync_v3/: clock.h  controller_flopsync.cpp  controller_flopsync.h  critical_section.cpp  critical_section.h  dummy_synchronizer2.cpp  dummy_synchronizer2.h  fbs.cpp  fbs.h  flooder_root_node.cpp  flooder_root_node.h  flooder_sync_node.cpp  flooder_sync_node.h  flooding_scheme.cpp  flooding_scheme.h  flopsync2.cpp  flopsync2.h  ftsp.cpp  ftsp.h  monotonic_clock.cpp  monotonic_clock.h  non_monotonic_clock.cpp  non_monotonic_clock.h  optimized_ramp_flopsync.cpp  optimized_ramp_flopsync.h  optimized_ramp_flopsync2.cpp  optimized_ramp_flopsync2.h  protocol_constants.h  rtt_estimator.cpp  rtt_estimator.h  rtt_measure.cpp  rtt_measure.h  synchronizer.cpp  synchronizer.h
legacy/: cc2520_mapping.cpp  flopsync2.cpp  nrf24l01.cpp  nrf24l01.h  (+4 more)
wandstemplot/: CMakeLists.txt  QAsyncSerial.cpp  QAsyncSerial.h  window.cpp
wandstemplot/clocksync/: main.cpp  window.cpp  window.h
wandstemplot/consumption/: CMakeLists.txt  window.cpp  window.h
wandstemplot/temperature/: main.cpp  window.cpp  window.h
(+50 files in other folders)
